<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/wallet_address"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/wallet_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/hint_wallet_address"
        android:inputType="text"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_below="@+id/wallet_address"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/save_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/get_info_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_info" />

    </LinearLayout>


</RelativeLayout>