<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E95420"
        android:padding="8dp">

        <TextView
            android:id="@+id/balance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_ether"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_balance_payout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_balance"
        android:background="#E95420"
        android:padding="8dp">

        <TextView
            android:id="@+id/balance_payout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_payout"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/balance_payout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_hashrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_balance_payout"
        android:background="#E95420"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hashrate"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reported_hashrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear_layout_hashrate">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>


</RelativeLayout>

